# PodcastDicordBot

./: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  dockerfile  list.sqlite  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
alembic/: env.py  script.py.mako
alembic/versions/: 03ac087824b7_init.py  5777a823d0fd_update_fields_with_default.py
botmodules/messages/: __init__.py
botmodules/models/: __init__.py  subscription.py
botmodules/utils/: __init__.py
commands/: commands.py
customViews/: validationView.py
database/: db.py
enums/: enums.py
messages/: descriptions.py  messages.py
model/: list.py
models/: customExceptions.py  episode.py  playstate.py  podcasts.py  subscription.py  user.py
rssreader/: reader.py
src/botpackage/enums/: __init__.py
src/botpackage/messages/: messages.py
src/botpackage/models/: podcasts.py
tests/: test_commands.py  test_converters.py  test_customAudio.py  test_db.py  test_reader.py  test_utils.py  test_validationView.py  test_vault.py
utils/: converters.py  customAudio.py  utils.py
vault/: vault.py
