[build-system]
requires = ["hatchling",
            "discord.py",
            "hvac",
            "requests",
            "pyPodcastParser",
            "sqlalchemy[asyncio]",
            "aiosqlite",
            "pytest_mock",
            "pytest[asyncio]",
            "pytest-asyncio",
            "python-dotenv",
            "botpackage"]
build-backend = "hatchling.build"

[project]
name = "botpackage"
version = "0.1.8"
authors = [{name="Pierre-Luc R."}]
description = "A discord bot that can play podcasts"
requires-python = ">=3.10.5"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
exclude=[
    "alembic.ini",
    "alembic/",
    ".vscode/",
    ".github/",
    "main.py",
    "pytest.ini",
    "requirements.txt",
    "list.sqlite",
]


[project.urls]
"Homepage" = "https://github.com/PILIX123/PodcastDicordBot"